DEX-24183 | fix: realign list display with baseline

--- a/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
+++ b/_src-lp/blocks/c-productswithvpn2/c-productswithvpn2.scss
@@ -12,8 +12,7 @@
   display: grid;
   justify-content: center;
   font-size: 18px;
-  column-gap: 20px;
-  row-gap: 0px;
+  gap: 0 20px;
   grid-template-columns: repeat(auto-fit, minmax(370px, min-content));
   padding: 20px;
 }
@@ -33,6 +32,16 @@
   margin-bottom: 120px; /* simulate row-gap without polluting subgrid */
 }
 
+.c-productswithvpn2 > div {
+  width: 32%;
+  position: relative;
+  padding: 2%;
+  margin: 1%;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 35%);
+}
+
 .c-productswithvpn2 .prod_box > div {
   display: grid;
   grid-template-rows: subgrid;
@@ -46,15 +55,7 @@
   margin: 1em 0;
 }
 
-.c-productswithvpn2 > div {
-  width: 32%;
-  position: relative;
-  padding: 2%;
-  margin: 1%;
-  border-radius: 5px;
-  background-color: #fff;
-  box-shadow: 0 2px 10px 0 rgb(0 0 0 / 35%);
-}
+
 
 .c-productswithvpn2 > div picture img {
   height: 20px;
@@ -221,12 +222,16 @@
 .c-productswithvpn2 > div table tbody,
 .c-productswithvpn2 > div table tbody tr,
 .c-productswithvpn2 > div table tbody tr td {
-  width: 100%;
   display: block;
 }
 
-.c-productswithvpn2 > div table.prodload tbody
- {
+.c-productswithvpn2 > div table.prodload tbody {
+  width: 100%;
+  display: block;
+  align-content: end;
+}
+
+.c-productswithvpn2 > div table:has(.buy_box)  * {
   width: 100%;
   display: block;
   align-content: end;
